force-app/main/default/objects/TAG_Project__c/TAG_Project__c.object-meta.xml
<CustomObject>
    <label>TAG Project</label>
    <nameField>
        <label>TAG Projects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TAG Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>