force-app/main/default/objects/TAG_Project__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aging Related Project</label>
    <type>Checkbox</type>
</CustomField>