force-app/main/default/objects/TAG_Project__c/fields/Broad_Phenotype__c.field-meta.xml
<CustomField>
    <fullName>Broad_Phenotype__c</fullName>
    <label>Broad Phenotype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adiposity</fullName>
            </value>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Agnostic</fullName>
            </value>
            <value>
                <fullName>Allergic Traits</fullName>
            </value>
            <value>
                <fullName>Auditory</fullName>
            </value>
            <value>
                <fullName>Autoimmune</fullName>
            </value>
            <value>
                <fullName>Blood Pressure</fullName>
            </value>
            <value>
                <fullName>Bone mineral density/Fracture</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Fibrosis</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Height</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Infectious disease</fullName>
            </value>
            <value>
                <fullName>Inflammation</fullName>
            </value>
            <value>
                <fullName>Iron</fullName>
            </value>
            <value>
                <fullName>Lipid Traits</fullName>
            </value>
            <value>
                <fullName>Liver Disease</fullName>
            </value>
            <value>
                <fullName>Microbial Infections</fullName>
            </value>
            <value>
                <fullName>Neuro-related</fullName>
            </value>
            <value>
                <fullName>Obesity</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Osteoporosis</fullName>
            </value>
            <value>
                <fullName>Pain-related traits</fullName>
            </value>
            <value>
                <fullName>Psoriasis/Autoimmune skin</fullName>
            </value>
            <value>
                <fullName>Renal Disease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>