force-app/main/default/objects/TAG_Project__c/fields/Broad_Status__c.field-meta.xml
<CustomField>
    <fullName>Broad_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Deep Dive</fullName>
            </value>
            <value>
                <fullName>In Queue (HTP)</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>