force-app/main/default/objects/TAG_Project__c/fields/Data_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Data_Freeze__c</fullName>
    <label>Data Freeze</label>
    <length>255</length>
    <type>Text</type>
</CustomField>