force-app/main/default/objects/TAG_Project__c/fields/Key_Findings__c.field-meta.xml
<CustomField>
    <fullName>Key_Findings__c</fullName>
    <label>Key Findings</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>