force-app/main/default/objects/TAG_Project__c/fields/MultiTFA_Interest__c.field-meta.xml
<CustomField>
    <fullName>MultiTFA_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-TFA Interest</label>
    <type>Checkbox</type>
</CustomField>