force-app/main/default/objects/TAG_Project__c/fields/Phenotype__c.field-meta.xml
<CustomField>
    <fullName>Phenotype__c</fullName>
    <label>Phenotype</label>
    <length>250</length>
    <type>Text</type>
</CustomField>