force-app/main/default/objects/TAG_Project__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Project Status</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>