force-app/main/default/objects/TAG_Project__c/fields/RGC_Champion__c.field-meta.xml
<CustomField>
    <fullName>RGC_Champion__c</fullName>
    <label>RGC Champion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>