force-app/main/default/objects/TAG_Project__c/fields/RGC_TAG_Champion__c.field-meta.xml
<CustomField>
    <fullName>RGC_TAG_Champion__c</fullName>
    <label>RGC Champion [LEGACY]</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alan Shuldiner</fullName>
            </value>
            <value>
                <fullName>Charles Paulding</fullName>
            </value>
            <value>
                <fullName>Claudia Gonzaga-Jauregui</fullName>
            </value>
            <value>
                <fullName>Eric Jorgensen</fullName>
            </value>
            <value>
                <fullName>Gannie Tzoneva</fullName>
            </value>
            <value>
                <fullName>Goncalo Abecasis</fullName>
            </value>
            <value>
                <fullName>Jan Freudenberg</fullName>
            </value>
            <value>
                <fullName>Jonas Nielson</fullName>
            </value>
            <value>
                <fullName>Juan Rodriguez-Flores</fullName>
            </value>
            <value>
                <fullName>Julie Horowitz</fullName>
            </value>
            <value>
                <fullName>Katherine Siminovich</fullName>
            </value>
            <value>
                <fullName>Kavita Praveen</fullName>
            </value>
            <value>
                <fullName>Luca Lotta</fullName>
            </value>
            <value>
                <fullName>Manuel Ferreira</fullName>
            </value>
            <value>
                <fullName>Moeen</fullName>
            </value>
            <value>
                <fullName>Niek Verweij</fullName>
            </value>
            <value>
                <fullName>Nila Banerjee</fullName>
            </value>
            <value>
                <fullName>Patrick Shuldiner</fullName>
            </value>
            <value>
                <fullName>Suganthi</fullName>
            </value>
            <value>
                <fullName>Tanima De</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>