force-app/main/default/objects/TAG_Project__c/fields/RGCRPM_Contact__c.field-meta.xml
<CustomField>
    <fullName>RGCRPM_Contact__c</fullName>
    <label>RGC-RPM Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jason Mighty</fullName>
            </value>
            <value>
                <fullName>Michelle LeBlanc</fullName>
            </value>
            <value>
                <fullName>Larizbeth Romero</fullName>
            </value>
            <value>
                <fullName>Ashley Paynter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>