force-app/main/default/objects/TAG_Project__c/fields/Scientific_Champion__c.field-meta.xml
<CustomField>
    <fullName>Scientific_Champion__c</fullName>
    <label>Scientific Champion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>