force-app/main/default/objects/TAG_Project__c/fields/TAG__c.field-meta.xml
<CustomField>
    <fullName>TAG__c</fullName>
    <label>TAG [LEGACY]</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Founders/Special Pop</fullName>
            </value>
            <value>
                <fullName>Immune, Resp, ID, I/O</fullName>
            </value>
            <value>
                <fullName>M&amp;M/CVD/SD</fullName>
            </value>
            <value>
                <fullName>PGx</fullName>
            </value>
            <value>
                <fullName>Neuro/Ophthal</fullName>
            </value>
            <value>
                <fullName>Mendelian</fullName>
            </value>
            <value>
                <fullName>Non Production</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>