force-app/main/default/objects/TAG_Project__c/fields/TAG_Global__c.field-meta.xml
<CustomField>
    <fullName>TAG_Global__c</fullName>
    <label>TAG</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TAG</valueSetName>
    </valueSet>
</CustomField>