force-app/main/default/objects/TAG_Project__c/fields/TAG_Meeting_Updates__c.field-meta.xml
<CustomField>
    <fullName>TAG_Meeting_Updates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAG Meeting Updates</label>
    <referenceTo>TAG_Meeting_Updates__c</referenceTo>
    <relationshipLabel>TAG Projects</relationshipLabel>
    <relationshipName>TAG_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>