force-app/main/default/objects/TAG_Project__c/fields/TAG_Project_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>TAG_Project_Name_Link__c</fullName>
    <label>TAG Project Link</label>
    <type>Url</type>
</CustomField>