force-app/main/default/objects/TAG_Project__c/fields/TAG_Project_Name_Link_RT__c.field-meta.xml
<CustomField>
    <fullName>TAG_Project_Name_Link_RT__c</fullName>
    <label>TAG Project Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>