force-app/main/default/objects/TAG_Project__c/fields/Target_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Target_Nomination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Target Nomination</label>
    <type>Checkbox</type>
</CustomField>