force-app/main/default/objects/TAG_Project__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area [LEGACY]</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Agnostic</fullName>
            </value>
            <value>
                <fullName>Auditory</fullName>
            </value>
            <value>
                <fullName>CV/F</fullName>
            </value>
            <value>
                <fullName>Immune, Resp</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>M&amp;M</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Ophthal</fullName>
            </value>
            <value>
                <fullName>SD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>