force-app/main/default/objects/TAG_Project__c/fields/Total_Sub_Projects__c.field-meta.xml
<CustomField>
    <fullName>Total_Sub_Projects__c</fullName>
    <label>Total # Sub-Projects</label>
    <summaryForeignKey>TAG_Sub_Project__c.Parent_TAG_Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>