force-app/main/default/objects/TAG_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Therapeutic_Area_Global__c</columns>
    <columns>TAG_Global__c</columns>
    <columns>Total_Sub_Projects__c</columns>
    <columns>Scientific_Champion__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Phenotype__c</columns>
    <columns>Broad_Phenotype__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>