force-app/main/default/objects/TAG_Project__c/listViews/Kanban_View.listView-meta.xml
<ListView>
    <fullName>Kanban_View</fullName>
    <columns>NAME</columns>
    <columns>Total_Sub_Projects__c</columns>
    <columns>Therapeutic_Area__c</columns>
    <columns>TAG__c</columns>
    <columns>Scientific_Champion__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Phenotype__c</columns>
    <columns>Broad_Phenotype__c</columns>
    <filterScope>Everything</filterScope>
    <label>Kanban View</label>
</ListView>